2009-04-02  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Mvc.addin.xml: Bump version.

	* Gui/AddViewDialog.cs: Disable class selector, and the widget
	  it uses has broken input handling in modal dialogs.

2009-04-02  Michael Hutchinson  <mhutchinson@novell.com>

	* AspMvcProject.cs: Add a workaround for Bug 491377: Package
	  references can't be local-copied even if they aren't GAC
	  assemblies.

2009-04-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Templates/WebConfigApp.xft.xml: Fix web.config.

2009-04-02  Michael Hutchinson  <mhutchinson@novell.com>

	* System.Web.Mvc.dll: Need assembly signed with winfx key.

2009-04-02  Michael Hutchinson  <mhutchinson@novell.com>

	* System.Web.Mvc.dll:
	* MonoDevelop.AspNet.Mvc.csproj:
	* MonoDevelop.AspNet.Mvc.addin.xml: Bump to 2.0. Fix refs. Add
	  a local copy of the GMCS-built, MS-PL System.Web.Mvc dll.

	* gtk-gui/gui.stetic: Updated.

2009-03-13  Michael Hutchinson  <mhutchinson@novell.com>

	* gtk-gui/gui.stetic: Track build directory change.

2009-03-13  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Mvc.csproj: Move output dir from ../bin
	  to ../build.

2009-03-13  Michael Hutchinson  <mhutchinson@novell.com>

	* gtk-gui:
	* gtk-gui/gui.stetic:
	* gtk-gui/generated.cs:
	* gtk-gui/MonoDevelop.AspNet.Mvc.Gui.AddViewDialog.cs: Add
	  missing files.

2009-03-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Mvc.csproj:
	* MonoDevelop.AspNet.Mvc.addin.xml: Reference the
	  TextTemplating addin.

	* Gui/AddViewDialog.cs: Fix warning.

	* Gui/FolderNodeBuilderExtension.cs: Move error-showing code
	  to the TemplatingService.

2009-03-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Mvc.addin.xml: Update dependencies.

	* Gui/AddViewDialog.cs:
	* MonoDevelop.AspNet.Mvc.csproj: Add class picker.

2009-03-06  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/AddViewDialog.cs: Get the placeholder list from the