@@ -1,5 +1,9 @@
 2009-04-02  Michael Hutchinson  <mhutchinson@novell.com>
 
+	* MonoDevelop.TextTemplating.addin.xml: Bump version.
+
+2009-04-02  Michael Hutchinson  <mhutchinson@novell.com>
+
 	* MonoDevelop.TextTemplating.csproj:
 	* MonoDevelop.TextTemplating.addin.xml: Bump to 2.0. Fix refs.
 
